@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*brscan4-0.4.3.1 (18 Jul 2015)
+
+  18 Jul 2015; Ulrich Müller <ulm@gentoo.org> +brscan4-0.4.3.1.ebuild:
+  Version bump.
+
 *brscan4-0.4.3.0 (04 Mar 2015)
 
   04 Mar 2015; Ulrich Müller <ulm@gentoo.org> +brscan4-0.4.3.0.ebuild:
